--- a/resources/styles/partials/_navlink.scss
+++ b/resources/styles/partials/_navlink.scss
@@ -1,232 +1,245 @@
 @use "./variables";
 
 .wab-nav {
-    .navbar-nav {
-        .nav-link {
-            padding-left: 1rem;
-            padding-right: 1rem;
+  .navbar-nav {
+    .nav-link {
+      position: relative;
+
+      padding-left: 1rem;
+      padding-right: 1rem;
+
+      &:not(.active) {
+        &::after {
+          content: "";
+          opacity: 0;
+          height: 1px;
+          width: 10%;
+          position: absolute;
+          bottom: 0;
+          left: 0;
+          transition: opacity #{$ease}, width #{$ease};
         }
-    }
 
-    .dropdown-item {
-        // transition: background 0.3s ease-in-out;
-
-        .icon {
-            margin-left: 0.5rem;
-            transition: rotate #{$ease};
+        &:hover::after {
+          opacity: 1;
+          width: 100%;
         }
-    }
+      }
 
-    .dropdown-item:hover,
-    .dropdown-item:focus {
-        background-color: transparent;
-
-        .icon {
-            rotate: -45deg;
-        }
-    }
-
-    //
-
-    .nav-link,
-    .dropdown {
-        position: relative;
-        // transition: all 0.3s ease-in-out;
-
-        &:not(.active) {
-            &::after {
-                content: "";
-                opacity: 0;
-                height: 1px;
-                width: 10%;
-                position: absolute;
-                bottom: 0;
-                left: 0;
-                transition: opacity #{$ease}, width #{$ease};
-            }
-
-            &:hover::after {
-                opacity: 1;
-                width: 100%;
-            }
-        }
-    }
-
-    .nav-link.active {
-        transition: all #{$ease};
+      &.active {
         background-color: transparent;
 
         // changes the default highlight size
         &.wab-highlight {
-            --x-offset: 0.8rem;
-            --y-offset: 0.2rem;
+          --x-offset: 0.8rem;
+          --y-offset: 0.2rem;
         }
+      }
+    }
+  }
+
+  .dropdown {
+    .dropdown-item {
+      .icon {
+        margin-left: 0.5rem;
+        transition: rotate #{$ease};
+      }
+
+      &:hover,
+      &:focus {
+        background-color: transparent;
+
+        .icon {
+          rotate: -45deg;
+        }
+      }
     }
 
-    .dropdown-toggle {
-        .imgWhite {
-            transition: rotate #{$ease};
-        }
-
-        &:hover {
-            .imgWhite {
-                rotate: 45deg;
-            }
-        }
+    .imgWhite {
+      transition: rotate #{$ease};
     }
 
-    &.dark-nav {
-        .btn {
-            --outline-color: #{$primary};
-            --bs-btn-bg: #{$dark};
-            --bs-btn-border-color: #{$light};
-            --bs-btn-color: #{$light};
-        }
+    &:hover, .nav-link.show {
+      .imgWhite {
+        rotate: 45deg;
+      }
+    }
+  }
 
-        .navbar-nav {
-            --bs-nav-link-color: #{$light};
-            --bs-nav-link-hover-color: #{$dark};
-        }
-        .dropdown-item {
-            transition: color #{$ease};
-
-            .icon {
-                transition: color #{$ease}, rotate #{$ease};
-            }
-        }
-        .dropdown-item:hover,
-        .dropdown-item:focus {
-            color: #{$primary};
-
-            .icon {
-                color: #{$primary};
-            }
-        }
-
-        .nav-link,
-        .dropdown {
-            &:not(.active) {
-                &::after {
-                    background-color: #{$primary};
-                }
-            }
-        }
-
-        .dropdown-toggle::after {
-            display: none;
-        }
-
-        .nav-link {
-            color: #{$light};
-        }
-
-        .wab-highlight {
-            color: #{$dark};
-        }
+  &.dark-nav {
+    .btn {
+      --outline-color: #{$primary};
+      --bs-btn-bg: #{$dark};
+      --bs-btn-border-color: #{$light};
+      --bs-btn-color: #{$light};
     }
 
-    &.yellow-nav {
-        background-color: #{$primary};
-
-        .btn {
-            --outline-color: #{$secondary};
-            --bs-btn-bg: #{$primary};
-            --bs-btn-border-color: #{$dark};
-            --bs-btn-color: #{$dark};
-            --bs-btn-hover-bg: #{$primary};
-            --bs-btn-hover-border-color: #{$dark};
-        }
-
-        .navbar-nav {
-            --bs-nav-link-color: #{$dark};
-            --bs-nav-link-hover-color: #{$light};
-
-            .navHighlight {
-                z-index: 0;
-            }
-        }
-
-        .dropdown-item:hover,
-        .dropdown-item:focus {
-            color: #{$primary};
-
-            .icon {
-                color: #{$primary};
-            }
-        }
-
-        .nav-link,
-        .dropdown {
-            &:not(.active) {
-                &::after {
-                    background-color: #{$secondary};
-                }
-            }
-        }
-
-        .dropdown-toggle::after {
-            display: none;
-        }
-
-        .nav-link {
-            color: #{$dark};
-        }
-
-        .nav-link.active {
-            color: #{$light};
-
-            &.wab-highlight {
-                &:after {
-                    background-image: url("/public/assets/highlight_secondary.svg");
-                }
-            }
-        }
+    .navbar-nav {
+      --bs-nav-link-color: #{$light};
+      --bs-nav-link-hover-color: #{$dark};
     }
 
-    &.white-nav {
-        background-color: #{$light};
-        .btn {
-            --outline-color: #{$primary};
-            --bs-btn-bg: #{$light};
-            --bs-btn-border-color: #{$dark};
-            --bs-btn-color: #{$dark};
-            --bs-btn-hover-bg: #{$primary};
-            --bs-btn-hover-border-color: #{$dark};
-        }
+    .dropdown-item {
+      transition: color #{$ease};
 
-        .navbar-nav {
-            --bs-nav-link-color: #{$light};
-            --bs-nav-link-hover-color: #{$dark};
-        }
-
-        .dropdown-item:hover,
-        .dropdown-item:focus {
-            color: #{$primary};
-
-            .icon {
-                color: #{$primary};
-            }
-        }
-
-        .nav-link,
-        .dropdown {
-            &:not(.active) {
-                &::after {
-                    background-color: #{$primary};
-                }
-            }
-        }
-
-        .dropdown-toggle::after {
-            display: none;
-        }
-
-        .nav-link {
-            color: #{$dark};
-        }
-
-        .wab-highlight {
-            color: #{$dark};
-        }
+      .icon {
+        transition: color #{$ease}, rotate #{$ease};
+      }
     }
+
+    .dropdown-item:hover,
+    .dropdown-item:focus {
+      color: #{$primary};
+
+      .icon {
+        color: #{$primary};
+      }
+    }
+
+    .nav-link,
+    .dropdown {
+      &:not(.active) {
+        &::after {
+          background-color: #{$primary};
+        }
+      }
+    }
+
+    .dropdown-toggle::after {
+      display: none;
+    }
+
+    .nav-link {
+      color: #{$light};
+    }
+
+    .wab-highlight {
+      color: #{$dark};
+    }
+  }
+
+  &.yellow-nav {
+    background-color: #{$primary};
+
+    .btn {
+      --outline-color: #{$secondary};
+      --bs-btn-bg: #{$primary};
+      --bs-btn-border-color: #{$dark};
+      --bs-btn-color: #{$dark};
+      --bs-btn-hover-bg: #{$primary};
+      --bs-btn-hover-border-color: #{$dark};
+    }
+
+    .navbar-nav {
+      --bs-nav-link-color: #{$dark};
+      --bs-nav-link-hover-color: #{$light};
+
+      .navHighlight {
+        z-index: 0;
+      }
+    }
+
+    /*.dropdown-item:hover,
+    .dropdown-item:focus {
+      color: #{$primary};
+
+      .icon {
+        color: #{$primary};
+      }
+    }*/
+
+    .nav-link,
+    .dropdown {
+      &:not(.active) {
+        &::after {
+          background-color: #{$secondary};
+        }
+      }
+    }
+
+    .nav-link {
+      color: #{$dark};
+    }
+
+    .nav-link.active {
+      color: #{$light};
+
+      &.wab-highlight {
+        &:after {
+          background-image: url("/public/assets/highlight_secondary.svg");
+        }
+      }
+    }
+
+    .dropdown-menu {
+      --bs-dropdown-bg: var(--bs-primary);
+      --bs-dropdown-color: var(--bs-dark);
+      --bs-dropdown-link-color: var(--bs-body-dark);
+      --bs-dropdown-border-color: var(--bs-dark);
+      --bs-dropdown-link-hover-color: var(--bs-secondary);
+    }
+  }
+
+  &.white-nav {
+    background-color: #{$light};
+
+    .btn {
+      --outline-color: #{$primary};
+      --bs-btn-bg: #{$light};
+      --bs-btn-border-color: #{$dark};
+      --bs-btn-color: #{$dark};
+      --bs-btn-hover-bg: #{$primary};
+      --bs-btn-hover-border-color: #{$dark};
+    }
+
+    /*.navbar-nav {
+      --bs-nav-link-color: #{$light};
+      --bs-nav-link-hover-color: #{$dark};
+    }*/
+
+    /*.dropdown-item:hover,
+    .dropdown-item:focus {
+      color: #{$primary};
+
+      .icon {
+        color: #{$primary};
+      }
+    }*/
+
+    .nav-link,
+    .dropdown {
+      &:not(.active) {
+        &::after {
+          background-color: #{$primary};
+        }
+      }
+    }
+
+    .nav-link {
+      color: #{$dark};
+    }
+
+    .wab-highlight {
+      color: #{$dark};
+    }
+
+    .dropdown-menu {
+      --bs-dropdown-bg: var(--bs-light);
+      --bs-dropdown-color: var(--bs-dark);
+      --bs-dropdown-link-color: var(--bs-body-dark);
+      --bs-dropdown-border-color: var(--bs-dark);
+      --bs-dropdown-link-hover-color: var(--bs-secondary);
+      /*
+       --bs-dropdown-border-radius: 0;
+       --bs-dropdown-border-width: var(--bs-border-width);
+       --bs-dropdown-inner-border-radius: calc(0 - var(--bs-border-width));
+       --bs-dropdown-divider-bg: var(--bs-border-color-translucent);
+       --bs-dropdown-divider-margin-y: 0.5rem;
+       --bs-dropdown-box-shadow: none;
+       --bs-dropdown-link-hover-color: var(--bs-body-color);
+       --bs-dropdown-link-hover-bg: var(--bs-tertiary-bg);
+       --bs-dropdown-link-active-color: #fff;
+       --bs-dropdown-link-active-bg: #f6e077;*/
+    }
+  }
 }
