Fixes services card theme

--- a/resources/styles/app.scss
+++ b/resources/styles/app.scss
@@ -24,10 +24,10 @@ $enable-responsive-font-sizes: true;
 @import "./partials/jumbo";
 @import "./partials/utility";
 @import "./partials/accordion";
-@import "./partials/service-card";
 @import "./partials/navlink";
 @import "./partials/offcanvas";
 @import "./partials/contact";
 @import "./partials/diagonalAccordion";
+@import "./partials/sections";
 @import "./chisiamo";
 @import "./servizi";
