--- a/resources/styles/partials/_buttons.scss
+++ b/resources/styles/partials/_buttons.scss
@@ -4,9 +4,14 @@
     --outline-offset-x: var(--outline-offset);
     --outline-offset-y: var(--outline-offset);
     --outline-color: #{variables.$secondary};
+    --bs-btn-border-width: 0;
 
     position: relative;
     z-index: 0;
+    display: flex;
+    gap: .5rem;
+    align-items: center;
+    justify-content: center;
 
     &:after {
         content: "";
@@ -45,7 +50,10 @@
     img,
     .icon {
         transition: rotate #{$ease};
+        width: 18px;
+        height: 18px;
     }
+
     &:hover {
         img,
         .icon {
