--- a/resources/styles/partials/_typography.scss
+++ b/resources/styles/partials/_typography.scss
@@ -1,34 +1,46 @@
 @use "./variables";
 
 .fs-max {
-    font-size: 6rem;
+  font-size: 6rem;
 }
 
 .wab-highlight {
-    --x-offset: -0.15em;
-    --y-offset: 0;
-    color: var(--color);
-    position: relative;
-    display: inline-block;
-    line-height: 1.4;
-    white-space: nowrap;
-    text-decoration: none;
-    z-index: 0;
+  --x-offset: -0.15em;
+  --y-offset: 0;
+  color: var(--color);
+  position: relative;
+  display: inline-block;
+  line-height: 1.4;
+  white-space: nowrap;
+  text-decoration: none;
+  z-index: 0;
 
-    &:after {
-        content: "";
-        background-image: var(--wab-bg-highlight-url);
+  &:after {
+    content: "";
+    background-image: var(--wab-bg-highlight-url);
 
-        background-repeat: repeat-x;
-        background-size: contain;
-        position: absolute;
-        top: var(--y-offset);
-        bottom: var(--y-offset);
-        left: var(--x-offset);
-        right: var(--x-offset);
-        z-index: -1;
-        transform: skewX(33deg);
-        // Fixes jagged lines in chrome
-        -webkit-backface-visibility: hidden;
-    }
+    background-repeat: repeat-x;
+    background-size: contain;
+    position: absolute;
+    top: var(--y-offset);
+    bottom: var(--y-offset);
+    left: var(--x-offset);
+    right: var(--x-offset);
+    z-index: -1;
+    transform: skewX(33deg);
+    // Fixes jagged lines in chrome
+    -webkit-backface-visibility: hidden;
+  }
+}
+
+.icon {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+
+  svg {
+    vertical-align: unset;
+    width: 100%;
+    height: 100%;
+  }
 }
