--- a/resources/styles/partials/_contact.scss
+++ b/resources/styles/partials/_contact.scss
@@ -1,20 +1,20 @@
 @use "./variables";
 
-.light-contact {
-    background: #{$light};
+// .light-contact {
+//     background: #{$light};
 
-    .row {
-        flex-direction: row-reverse;
-    }
+//     .row {
+//         flex-direction: row-reverse;
+//     }
 
-    .wab-highlight--secondary {
-        color: #{$dark} !important;
+//     .wab-highlight--secondary {
+//         color: #{$dark} !important;
 
-        &::after {
-            background-image: url(http://127.0.0.1:5173/public/assets/highlight_primary.svg);
-        }
-    }
-}
+//         &::after {
+//             background-image: url(http://127.0.0.1:5173/public/assets/highlight_primary.svg);
+//         }
+//     }
+// }
 
 .reverse-contact {
     background-color: #{$light};
