Fixes accordion theme

--- a/resources/styles/partials/_buttons.scss
+++ b/resources/styles/partials/_buttons.scss
@@ -78,6 +78,10 @@
     }
 }
 
+.btn-themed {
+
+}
+
 .btn-outline-primary {
     --bs-btn-bg: #{variables.$light};
     --bs-btn-border-color: #{variables.$dark};
