--- a/resources/styles/partials/_accordion.scss
+++ b/resources/styles/partials/_accordion.scss
@@ -1,121 +1,121 @@
 .wab-accordion {
-    
-        background-color: #{$light};
+
+  background-color: var(--bs-body-bg);
+  color: var(--bs-body-color);
+
+  .accordion {
+     border-top: 3px solid var(--accent-color);
+     border-bottom: 3px solid var(--accent-color);
+    // --bs-accordion-color: #{$dark};
+    // --bs-accordion-border-color: #{$primary};
+    --bs-accordion-border-width: #{3px};
+    --bs-accordion-btn-active-icon: src= "";
+    // --bs-accordion-btn-color: #{$dark};
+    // --bs-accordion-bg: #{$light};
+    // --bs-accordion-active-bg: transparent;
+    // --bs-accordion-active-color: transparent;
+    --bs-accordion-btn-padding-y: 2rem;
+  }
+
+
+  &.dark-accordion {
+    .row {
+      flex-direction: row-reverse;
+    }
+
+    .accordion {
+      border-top: 3px solid #{$primary};
+      border-bottom: 3px solid #{$primary};
+      --bs-accordion-border-color: #{$primary};
+      --bs-accordion-border-width: #{3px};
+      --bs-accordion-btn-active-icon: src= "";
+      --bs-accordion-btn-padding-y: 2rem;
+
+      .accordion-button {
+        color: #{$light};
+
+        &:hover,
+        &:not(.collapsed) {
+          color: #{$dark};
+        }
+      }
+
+      .accordion-item {
         color: #{$dark};
+      }
+    }
+  }
 
-        .accordion {
-            // border-top: 3px solid #{$primary};
-            // border-bottom: 3px solid #{$primary};
-            // --bs-accordion-color: #{$dark};
-            // --bs-accordion-border-color: #{$primary};
-            --bs-accordion-border-width: #{3px};
-            --bs-accordion-btn-active-icon: src= "";
-            // --bs-accordion-btn-color: #{$dark};
-            // --bs-accordion-bg: #{$light};
-            // --bs-accordion-active-bg: transparent;
-            // --bs-accordion-active-color: transparent;
-            --bs-accordion-btn-padding-y: 2rem;
-        }
-    
+  .accordion-item:has(.show) {
+    background-color: var(--accent-color);
+    --bs-accordion-active-color: #{$dark};
+  }
 
-    &.dark-accordion {
-        .row {
-            flex-direction: row-reverse;
-        }
+  .accordion-item {
+    transition: background-color #{$ease};
+    position: relative;
 
-        .accordion {
-            border-top: 3px solid #{$primary};
-            border-bottom: 3px solid #{$primary};
-            --bs-accordion-border-color: #{$primary};
-            --bs-accordion-border-width: #{3px};
-            --bs-accordion-btn-active-icon: src= "";
-            --bs-accordion-btn-padding-y: 2rem;
-
-            .accordion-button {
-                color: #{$light};
-
-                &:hover,
-                &:not(.collapsed) {
-                    color: #{$dark};
-                }
-            }
-
-            .accordion-item {
-                color: #{$dark};
-            }
-        }
+    .cup {
+      opacity: 0;
+      transition: opacity #{$ease}, scale #{$ease};
+      margin-top: 0;
+      scale: 0.9;
     }
 
-    .accordion-item:has(.show) {
-        background-color: #{$primary};
-        --bs-accordion-active-color: #{$dark};
+    .text {
+      position: relative;
+      padding-left: 70px;
+      transition: padding #{$ease};
     }
 
-    .accordion-item {
-        transition: background-color #{$ease};
-        position: relative;
+    .arrow {
+      position: absolute;
+      top: 50%;
+      left: 0;
+      transform: translate(0, -50%);
+      transition: transform #{$ease}, left #{$ease};
+      transform-origin: center;
+    }
 
-        .cup {
-            opacity: 0;
-            transition: opacity #{$ease}, scale #{$ease};
-            margin-top: 0;
-            scale: 0.9;
-        }
+    &:hover {
+      background-color: var(--accent-color);
 
+      .arrow {
+        transform: translate(20%, -50%) rotate(-45deg);
+      }
+    }
+
+    .accordion-button {
+      color: #{$dark-text};
+      background-color: transparent;
+      box-shadow: none;
+      display: flex;
+      column-gap: 1rem;
+
+      &::after {
+        background-image: none;
+      }
+
+      &:not(.collapsed) {
         .text {
-            position: relative;
-            padding-left: 70px;
-            transition: padding #{$ease};
+          padding-left: 20px;
         }
 
         .arrow {
-            position: absolute;
-            top: 50%;
-            left: 0;
-            transform: translate(0, -50%);
-            transition: transform #{$ease}, left #{$ease};
-            transform-origin: center;
+          left: 100%;
+          transform: translate(100%, -50%) rotate(135deg);
         }
-
-        &:hover {
-            background-color: #f6e077;
-
-            .arrow {
-                transform: translate(20%, -50%) rotate(-45deg);
-            }
-        }
-
-        .accordion-button {
-            color: #{$dark-text};
-            background-color: transparent;
-            box-shadow: none;
-            display: flex;
-            column-gap: 1rem;
-
-            &::after {
-                background-image: none;
-            }
-
-            &:not(.collapsed) {
-                .text {
-                    padding-left: 20px;
-                }
-
-                .arrow {
-                    left: 100%;
-                    transform: translate(100%, -50%) rotate(135deg);
-                }
-            }
-        }
+      }
     }
+  }
 
-    .show {
-        .cup {
-            opacity: 100%;
-            scale: 1;
-            // NON possiamo usare il margin negativo perchè il padre ha la classe collapse e quindi ha un overflow quando
-            // si apre e si chiude, quindi risulterebbe in un effetto brutto e scattoso
-            //margin-top: -10%;
-        }
+  .show {
+    .cup {
+      opacity: 100%;
+      scale: 1;
+      // NON possiamo usare il margin negativo perchè il padre ha la classe collapse e quindi ha un overflow quando
+      // si apre e si chiude, quindi risulterebbe in un effetto brutto e scattoso
+      //margin-top: -10%;
     }
+  }
 }
