--- a/resources/styles/themes/_dark.scss
+++ b/resources/styles/themes/_dark.scss
@@ -22,39 +22,40 @@
     --bs-navbar-hover-color: var(--bs-white);
   }
 
-        .btn-dark {
-          --bs-btn-hover-bg: #{$primary};
-          --bs-btn-hover-color: #{$dark};
-          --outline-color: var(--bs-primary);
-        }
-    
-        .btn:after {
-          border: 3px solid $light;
-        }
+  .btn-dark {
+    --bs-btn-hover-bg: #{$primary};
+    --bs-btn-hover-color: #{$dark};
+    --outline-color: var(--bs-primary);
+  }
+
+  .btn:after {
+    border: 3px solid $light;
+  }
+
   .card {
     --bs-card-border-color: var(--bs-primary);
   }
 
-        .wab-accordion {
-          background-color: #{$dark};
-          color: #{$light};
-    
-          .accordion {
-            border-top: 3px solid #f6e077;
-            border-bottom: 3px solid #f6e077;
-            --bs-accordion-color: #{$dark};
-            --bs-accordion-border-color: #f6e077;
-            --bs-accordion-btn-color: #{$light};
-            --bs-accordion-bg: #{$dark};
-            --bs-accordion-active-bg: transparent;
-            --bs-accordion-active-color: transparent;
-    
-            .accordion-button {
-              color: #{$light};
-            }
-          }
-        }
-        .dropdown {
+  .wab-accordion {
+    //background-color: #{$dark};
+    //color: #{$light};
+
+    .accordion {
+      //border-top: 3px solid #f6e077;
+      //border-bottom: 3px solid #f6e077;
+      --bs-accordion-color: #{$dark};
+      --bs-accordion-border-color: #f6e077;
+      --bs-accordion-btn-color: #{$light};
+      --bs-accordion-active-bg: transparent;
+      --bs-accordion-active-color: transparent;
+
+      .accordion-button {
+        color: #{$light};
+      }
+    }
+  }
+
+  .dropdown {
     .dropdown-menu {
       --bs-dropdown-bg: var(--bs-dark);
       --bs-dropdown-border-color: var(--bs-border-color);
@@ -74,6 +75,6 @@
 
   .wab-highlight {
     --color: #{variables.$dark};
-                --wab-bg-highlight-url: url("/public/assets/highlight_primary.svg");
+    --wab-bg-highlight-url: url("/public/assets/highlight_primary.svg");
   }
 }
