--- a/resources/styles/themes/_light.scss
+++ b/resources/styles/themes/_light.scss
@@ -24,27 +24,36 @@
       --outline-color: var(--bs-primary);
     }
 
-    .btn:after {
-      border: 3px solid $dark;
-    }
+        .btn {
+          --bs-btn-bg: var(--bs-body-bg);
+          --bs-btn-color: var(--bs-body-color);
+          --outline-color: var(--accent-color);
+        }
+    
+        .btn:after {
+          border: 3px solid var(--bs-body-color);
+        }
 
     .wab-accordion {
-      //background-color: #{$light};
-      //color: #{$dark};
+      
 
-      .accordion {
-        //border-top: 3px solid #f6e077;
-        //border-bottom: 3px solid #f6e077;
-        --bs-accordion-color: #{$dark};
-        --bs-accordion-border-color: #f6e077;
-        --bs-accordion-btn-color: #{$dark};
-        --bs-accordion-active-bg: transparent;
-        --bs-accordion-active-color: transparent;
+      // .accordion {
+       
+      //   --bs-accordion-color: var(--bs-body-color);
+      //   --bs-accordion-border-color: var(--accent-color);
+      //   --bs-accordion-btn-color: var(--bs-body-color);
+      //   --bs-accordion-active-bg: transparent;
+      //   --bs-accordion-active-color: transparent;
 
-        .accordion-button {
-          color: #{$dark};
-        }
-      }
+      //   .accordion-item {
+      //       color: var(--bs-body-color);
+      //     }
+        
+      //   //   .accordion-button:hover,
+      //   //   .accordion-button:focus {
+      //   //     color: var(--bs-body-color);
+      //   //   }
+      // }
     }
 
   .card {
